# CCUCoding

./: .gitignore  README.md
CSCI 330/codingexercises/: test.js
CSCI120/: Chapter7media.pptx
CSCI135/Class challenges/: test1.py  test2.py  test3.py
CSCI135/homework/: First_File_Lakota.py  Homework 2 Lakota Dolce.py  Homework 5 Lakota Dolce.py  Homework Tuples-MSI.py  Homework Tuples.py  Homework While loops.py  Wk 09 Homework Lakota Dolce.py  Wk 14 Homework Lakota Dolce.py  Wk 14 Homework pt 2.py  wk10 Homework Lakota Dolce.py
CSCI145/Semester Project/: LinkedListServices.py  balisticsCalculator.py  variablesFile.py
CSCI145/WK 06/: WK 06 Notes.py  WK 06-2 Lakota Dolce.py  Wk 06-1 Lakota Dolce.py
CSCI145/Wk 02/: Assignment 1 Wk2 Lakota Dolce.py
CSCI145/Wk 03/: FIleReview.py
CSCI145/Wk 04/: Wk 04 Notes.py  Wk04-2 Lakota Dolce-Desktop.py  test.py  (+1 more)
CSCI207/dev/mod5/src/: CMakeLists.txt  main.cpp  passparams.cpp
CSCI207/dev/mod9/CppBlackjack/: CMakeLists.txt
CSCI207/dev/mod9/CppBlackjack/app/: CMakeLists.txt  Game.cpp
CSCI207/dev/mod9/CppBlackjack/inc/: Card.h  Deck.h  Player.h
CSCI207/dev/mod9/CppBlackjack/src/: CMakeLists.txt  Card.cpp  Deck.cpp  Player.cpp
CSCI207/dev/mod9/CppBlackjack/tests/: BlackjackTest.cpp  CMakeLists.txt  CardTest.cpp  DeckTest.cpp  PlayerTest.cpp
CSCI210/: CSCI-210-Exam1-Study-Guide.docx
CSCI220/: CSCI220_Project_K.py
CSCI350/: CSCI350.sln
CSCI473/: wjones-git-repo-main.zip:Zone.Identifier
Semester Project/: RangeCard.txt  adminFile.py  backup.txt  calculator.py  userFile.py
Wk 02/: Assignment 2 Wk02 Lakota Dolce.py  FunctionsReview.py  Wk 02 Notes.py
Wk 03/: Review2Pseudocode.py  Wk03-1 Lakota Dolce.py  Wk03-2 Lakota Dolce.py
Wk 04/: Wk04-1 Lakota Dolce.py
Wk 05/: Wk05-1 Lakota Dolce.py
Wk 07/: Wk 07 Notes.py  Wk 07-1LakotaDolce.py
Wk 09/: Wk 09 Notes.py  Wk 09-2 Lakota Dolce.py
Wk 11/: bankAccountFile.py
Wk 12/: SearchesFile.py
(+369 files in other folders)
